# subt

./: .gitignore
aplugin_prova/: package.xml
aplugin_prova/voliro_controller_plugin/: publisher.cc  sample_system.cc  sample_system.hh
aplugin_prova/voliro_kolibri/: model.config  model.sdf
ign_migration_scripts/launch/: preview.ign
submitted_models/asl_kolibri_ignition_gazebo_plugin_1/: CMakeLists copy.txt  CMakeLists.txt  package.xml
submitted_models/asl_kolibri_sensor_config_1/: CMakeLists.txt  model.config  model.sdf  package.xml
submitted_models/asl_kolibri_sensor_config_1/launch/: description.launch  spawner.rb  vehicle_topics.launch
submitted_models/asl_kolibri_sensor_config_1/urdf/: x3_from_sdf.xacro
submitted_models/asl_kolibri_sensor_config_1/voliro_controller_plugin/: sample_system.cc  sample_system.hh
submitted_models/asl_kolibri_sensor_config_1/worlds/: plugin_example.sdf
submitted_models/cerberus_gagarin_sensor_config_1/: README.md  model.config  model.sdf  modelOrig.urdf  model_package.sdf  specifications.md
submitted_models/cerberus_kolibri_sensor_config_1/: CMakeLists.txt  README.md  model.config  model.sdf  package.xml  specifications.md
submitted_models/cerberus_m100_sensor_config_1/: model.sdf
submitted_models/cerberus_rmf_obelix_sensor_config_1/: model.sdf  modelOrig.urdf  specifications.md
submitted_models/cerberus_rmf_sensor_config_1/: model.sdf  specifications.md
submitted_models/x3_sensor_config_5/: model.sdf
subt_ign/launch/: cloudsim_sim.ign  competition.ign  competition_no_ros.ign  validate_connections.ign
(+52 files in other folders)
