<?xml version="1.0"?>
<package format="2">
  <name>asl_kolibri_sensor_config_1</name> 
  <version>0.1.0</version>
  <description>
    Thekolibri_sensor_config_1 package derived   </description>
  <maintainer email="ema.pallaoro@gmail.com">Emanuele Pallaoro</maintainer>
  <author email="ema.pallaoro@gmail.com">Emanuele Pallaoro</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roslaunch</buildtool_depend>
  <buildtool_depend>urdf</buildtool_depend>
  <buildtool_depend>xacro</buildtool_depend>

</package>
